[project]
name = "yali-nosql"
version = "0.1.0"
description = "NoSQL database modules for Yali toolkit"
readme = "README.md"
requires-python = ">=3.11"
license-files = ["LICENSE"]
authors = [{ name = "Ravishankar Haranath", email = "ravikh@gmailcom" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["yali", "yali4py", "yali-toolkit", "yali-mbus"]
dependencies = [
    "yali-core>=0.1.0,<0.2.0",
    "redis[hiredis]>=5.2.1,<6.0.0",
    "pymongo[aws,encryption,gssapi,ocsp,snappy,zstd]>=4.10.1,<5.0.0",
]

[dependency-groups]
dev = ["pylint>=3.2.6,<4.0.0", "pyright>=1.1.376,<2.0.0", "ruff>=0.8.3,<1.0.0"]
test = [
    "pytest>=8.3.2,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
    "pytest-dependency>=0.6.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "yali/**/*",
    "tests/**/*",
    "pytest.ini",
    "README.md",
    "VERSION",
    "LICENSE",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["yali"]

[tool.pyright]

[tool.pylint."messages control"]
disable = "all"
enable = [
    "empty-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
ignore = ["setup.py", "__init__.py"]
ignore-paths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.uv.sources]
yali-core = { path = "../core", editable = true }
